force-app/main/default/objects/Submission__c/Submission__c.object-meta.xml
<CustomObject>
    <label>Submission</label>
    <nameField>
        <label>Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>