force-app/main/default/objects/Submission__c/fields/Appetite_Score__c.field-meta.xml
<CustomField>
    <fullName>Appetite_Score__c</fullName>
    <label>Appetite Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>