force-app/main/default/objects/Submission__c/fields/Broker_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency_Name__c</fullName>
    <label>Broker Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>