force-app/main/default/objects/Submission__c/fields/Broker_Reply_Sent__c.field-meta.xml
<CustomField>
    <fullName>Broker_Reply_Sent__c</fullName>
    <label>Broker Reply Sent</label>
    <type>DateTime</type>
</CustomField>