force-app/main/default/objects/Submission__c/fields/Broker_Tier__c.field-meta.xml
<CustomField>
    <fullName>Broker_Tier__c</fullName>
    <label>Broker Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>