force-app/main/default/objects/Submission__c/fields/Completeness_Score__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Score__c</fullName>
    <label>Completeness Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>