force-app/main/default/objects/Submission__c/fields/Completeness_Status__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Status__c</fullName>
    <label>Completeness Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>