force-app/main/default/objects/Submission__c/fields/Extraction_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Confidence__c</fullName>
    <label>Extraction Confidence</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>