force-app/main/default/objects/Submission__c/fields/Extraction_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extraction_JSON__c</fullName>
    <label>Extraction JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>