force-app/main/default/objects/Submission__c/fields/Extraction_Log__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Log__c</fullName>
    <label>Extraction Log</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>