force-app/main/default/objects/Submission__c/fields/Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Status__c</fullName>
    <label>Extraction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extraction Pending</fullName>
            </value>
            <value>
                <fullName>Extraction Complete</fullName>
            </value>
            <value>
                <fullName>Extraction Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>