force-app/main/default/objects/Submission__c/fields/Follow_Up_Email_Draft__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Email_Draft__c</fullName>
    <label>Follow-Up Email Draft</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>