force-app/main/default/objects/Submission__c/fields/Guidewire_History__c.field-meta.xml
<CustomField>
    <fullName>Guidewire_History__c</fullName>
    <label>Guidewire History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>