force-app/main/default/objects/Submission__c/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <label>Insured Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>