force-app/main/default/objects/Submission__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workers Comp</fullName>
                <default>true</default>
                <label>Workers Comp</label>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Commercial Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>