force-app/main/default/objects/Submission__c/fields/Lines_Requested__c.field-meta.xml
<CustomField>
    <fullName>Lines_Requested__c</fullName>
    <label>Lines Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>