force-app/main/default/objects/Submission__c/fields/NAICS_Codes__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Codes__c</fullName>
    <label>NAICS/Class Codes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>