force-app/main/default/objects/Submission__c/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <label>Payroll</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>