force-app/main/default/objects/Submission__c/fields/Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiration_Date__c</fullName>
    <label>Policy Expiration Date</label>
    <type>Date</type>
</CustomField>