force-app/main/default/objects/Submission__c/fields/Requested_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Requested_Coverage__c</fullName>
    <label>Requested Coverage</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>