force-app/main/default/objects/Submission__c/fields/Review_Priority__c.field-meta.xml
<CustomField>
    <fullName>Review_Priority__c</fullName>
    <label>Review Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>High Priority</fullName><default>false</default><label>High Priority</label></value>
            <value><fullName>Standard Review</fullName><default>false</default><label>Standard Review</label></value>
            <value><fullName>Low Priority</fullName><default>false</default><label>Low Priority</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>