force-app/main/default/objects/Submission__c/fields/Risk_Summary__c.field-meta.xml
<CustomField>
    <fullName>Risk_Summary__c</fullName>
    <label>Risk Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>