force-app/main/default/objects/Submission__c/fields/Routing_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Routing_Rationale__c</fullName>
    <label>Routing Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>