force-app/main/default/objects/Submission__c/fields/Submission_Email__c.field-meta.xml
<CustomField>
    <fullName>Submission_Email__c</fullName>
    <label>Submission Email</label>
    <referenceTo>Submission_Email__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>