force-app/main/default/objects/Submission__c/fields/Submission_Number__c.field-meta.xml
<CustomField>
    <fullName>Submission_Number__c</fullName>
    <displayFormat>SUB-{YYYY}-{00000}</displayFormat>
    <label>Submission Number</label>
    <type>AutoNumber</type>
</CustomField>