force-app/main/default/objects/Submission__c/fields/Total_WC_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Total_WC_Payroll__c</fullName>
    <label>Total WC Payroll</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>