force-app/main/default/objects/Submission__c/fields/Triage_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Triage_Completed_At__c</fullName>
    <label>Triage Completed At</label>
    <type>DateTime</type>
</CustomField>