force-app/main/default/objects/Submission__c/fields/WC_EL_Limits__c.field-meta.xml
<CustomField>
    <fullName>WC_EL_Limits__c</fullName>
    <label>WC EL Limits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>