force-app/main/default/objects/Submission__c/fields/WC_Premium_Estimate__c.field-meta.xml
<CustomField>
    <fullName>WC_Premium_Estimate__c</fullName>
    <label>WC Premium Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>