force-app/main/default/objects/Submission__c/fields/WC_States__c.field-meta.xml
<CustomField>
    <fullName>WC_States__c</fullName>
    <label>WC States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>